trying to fix cropping problem with sphere image

--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body {
 .background-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the image fills the div proportionally */
-    object-position: center; /* Centers the image */
-  }
+    object-fit: contain;
+    object-position: center;
+}
 
 #sphereImage {
     filter: invert(30%);
